--- a/notebooks/nb_91_OfflineRLDatasetLibraries.ipynb
+++ b/notebooks/nb_91_OfflineRLDatasetLibraries.ipynb
@@ -481,9 +481,13 @@
     "## Open X-Embodiment Repository\n",
     "October 2023 - Partners from 33 academic labs.\n",
     "\n",
+    "link to short [video](https://www.youtube.com/watch?v=KYctzX69vsk)\n",
+    "\n",
     "This [library](https://robotics-transformer-x.github.io/) introduced the **Open X-Embodiment Repository** that **includes a dataset with 22 different robot types** for X-embodiment learning, i.e. to learn from diverse and large-scale datasets from multiple robots for better transfer learning and improved generalization.\n",
     "\n",
-    "[Let's give a look](https://www.deepmind.com/blog/scaling-up-learning-across-many-different-robot-types)"
+    "[Let's give a look](https://www.deepmind.com/blog/scaling-up-learning-across-many-different-robot-types)\n",
+    "\n",
+    "GROOT Nvidia humanoid project: [link](https://www.youtube.com/watch?v=CkjI_Laxwpw)"
    ]
   },
   {
