--- a/notebooks/nb_92_Data_Collection.ipynb
+++ b/notebooks/nb_92_Data_Collection.ipynb
@@ -11,6 +11,7 @@
     "%autoreload 2\n",
     "%matplotlib inline\n",
     "%load_ext training_rl\n",
+    "%load_ext tensorboard\n",
     "%set_random_seed 12"
    ]
   },
@@ -231,9 +232,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%autoreload\n",
+    "#%tensorboard --logdir ../src/training_rl/offline_rl/ --host localhost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from training_rl.offline_rl.load_env_variables import load_env_variables\n",
     "load_env_variables()\n",
+    "#load_env_variables(\"/home/jovyan/tfl-training-rl/src/training_rl/offline_rl/\")\n",
     "\n",
     "import warnings\n",
     "import os\n",
@@ -525,6 +535,13 @@
     "\n",
     "[ MINARI: A dataset API for Offline Reinforcement Learning ](https://minari.farama.org/main/content/basic_usage/)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
