--- a/notebooks/nb_93_imitation_learning.ipynb
+++ b/notebooks/nb_93_imitation_learning.ipynb
@@ -697,7 +697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Let's give a loot at the state-action BC policy distribution**"
+    "**Let's give a look at the state-action BC policy distribution**"
    ]
   },
   {
@@ -738,7 +738,9 @@
    "source": [
     "**Visualize BC trained policy**\n",
     "\n",
-    "Below the imitation_policy_sampling=False arguments will give us the $\\arg \\max_a \\pi(a|s)$. By setting it to True you will be sampling actions from the policy."
+    "Below, the imitation_policy_sampling=False arguments will give us the $\\arg \\max_a \\pi(a|s)$. By setting it to True you will be sampling the most probable actions from the policy.\n",
+    "\n",
+    "<img src=\"_static/images/nb_93_max_policy.png\" alt=\"Snow\" style=\"width:40%;\">"
    ]
   },
   {
