--- a/notebooks/nb_94_Offline_RL_theory.ipynb
+++ b/notebooks/nb_94_Offline_RL_theory.ipynb
@@ -1041,7 +1041,7 @@
    "source": [
     "## Q-Transformer\n",
     "\n",
-    "Adapts the bellman equations to deal with a transformer architecture: [paper](https://qtransformer.github.io/)"
+    "Adapts the bellman equations to deal with a transformer architecture: [paper](https://qtransformer.github.io/) and [blog](https://qtransformer.github.io/)"
    ]
   },
   {
@@ -1102,7 +1102,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "282.2px"
+    "width": "359.6px"
    },
    "toc_section_display": true,
    "toc_window_display": true
