--- a/notebooks/nb_96_Offline_rl_exercises.ipynb
+++ b/notebooks/nb_96_Offline_rl_exercises.ipynb
@@ -689,15 +689,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offline_policy_config.policy_config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "offline_training(\n",
     "    offline_policy_config=offline_policy_config,\n",
     "    num_epochs = NUM_EPOCHS,\n",
@@ -820,7 +811,7 @@
     }
    },
    "source": [
-    "We will start again with the previous setup. So, as we did before, we will create again two datasets: one from a policy moving suboptimal from (0,0) to (7,0), and the other from another policy moving from (4,0) to (7,7). The goal is to find an agent capable of connecting trajectories coming from both datasets, in order to find the optimal path between (0,0) and (4,7)."
+    "We will start again with the previous setup. So, as we did before, we will create again two datasets: one from a policy moving suboptimal from (0,0) to (2,4), and the other from another policy moving from (4,0) to (7,7). The goal is to find an agent capable of connecting trajectories coming from both datasets, in order to find the optimal path between (2,0) and (2,4)."
    ]
   },
   {
@@ -850,22 +841,20 @@
     "\n",
     "OBSTACLE = ObstacleTypes.obst_free_8x8\n",
     "INITIAL_STATE_POLICY_I = (0,0)\n",
-    "FINAL_STATE_POLICY_I = (3, 7)\n",
-    "\n",
-    "INITIAL_STATE_POLICY_II = (4,0)\n",
-    "FINAL_STATE_POLICY_II = (7, 7)\n",
+    "INITIAL_STATE_POLICY_II = (2,0)\n",
+    "FINAL_STATE_POLICY = (2, 4)\n",
     "\n",
     "\n",
     "env_2D_grid_initial_config_I = Grid2DInitialConfig(\n",
     "    obstacles=OBSTACLE,\n",
     "    initial_state=INITIAL_STATE_POLICY_I,\n",
-    "    target_state=FINAL_STATE_POLICY_I,\n",
+    "    target_state=FINAL_STATE_POLICY,\n",
     ")\n",
     "\n",
     "env_2D_grid_initial_config_II = Grid2DInitialConfig(\n",
     "    obstacles=OBSTACLE,\n",
     "    initial_state=INITIAL_STATE_POLICY_II,\n",
-    "    target_state=FINAL_STATE_POLICY_II,\n",
+    "    target_state=FINAL_STATE_POLICY,\n",
     ")\n",
     "\n",
     "\n",
@@ -886,7 +875,9 @@
     }
    },
    "source": [
-    "### STEP 2: Create Minari datasets"
+    "### STEP 2: Create Minari datasets\n",
+    "\n",
+    "**Let's study how well offline RL algorithms can deal with the stitching property. We will examine some edge cases to compare them with some of the algorithms we have already studied.**"
    ]
   },
   {
@@ -901,15 +892,15 @@
    "source": [
     "IDENTIFIER_COMBINED_DATASETS = \"_stiching_property_I\"\n",
     "\n",
-    "# Dataset I\n",
+    "# Dataset I with 2000 collected points\n",
     "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_grid_deterministic_0_0_to_4_7\n",
-    "DATA_SET_IDENTIFIER_I = \"_move_downwards\"\n",
-    "NUM_STEPS_I = 1500\n",
+    "DATA_SET_IDENTIFIER_I = \"_longer_path\"\n",
+    "NUM_STEPS_I =2000\n",
     "\n",
-    "# Dataset II\n",
+    "# Dataset II with 1000 points\n",
     "#BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
-    "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
-    "DATA_SET_IDENTIFIER_II = \"_move_deterministic\"\n",
+    "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_move_right\n",
+    "DATA_SET_IDENTIFIER_II = \"_short_path\"\n",
     "NUM_STEPS_II = 1000"
    ]
   },
@@ -1015,13 +1006,13 @@
     "len_buffer = len(buffer_data)\n",
     "\n",
     "# Compute state-action data distribution\n",
-    "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
+    "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env, normalized=False)\n",
     "\n",
     "if \"start_0_0\" in selected_data_set.value:\n",
     "    env.set_starting_point((0,0))\n",
     "    snapshot_env(env)\n",
-    "elif \"start_4_0\" in selected_data_set.value:\n",
-    "    env.set_starting_point((4,0))\n",
+    "elif \"start_2_0\" in selected_data_set.value:\n",
+    "    env.set_starting_point((2,0))\n",
     "    snapshot_env(env)\n",
     "    "
    ]
@@ -1047,7 +1038,7 @@
    },
    "outputs": [],
    "source": [
-    "offline_rl_policies = [PolicyName.bcq_discrete, PolicyName.cql_discrete, PolicyName.imitation_learning]\n",
+    "offline_rl_policies = [PolicyName.bcq_discrete, PolicyName.cql_discrete]\n",
     "selected_offline_rl_policy = widget_list(offline_rl_policies)"
    ]
   },
@@ -1063,7 +1054,7 @@
    "source": [
     "# Offiline - Training\n",
     "\n",
-    "NUM_EPOCHS =5\n",
+    "NUM_EPOCHS = 5\n",
     "BATCH_SIZE = 128\n",
     "STEP_PER_EPOCH = 1.0*len_buffer\n",
     "NUMBER_TEST_ENVS = 1\n",
@@ -1074,9 +1065,15 @@
     "    policy_name=selected_offline_rl_policy.value,\n",
     "    render_mode=render_mode,\n",
     "    device=\"cpu\"\n",
-    ")\n",
-    "offline_policy_config.minari_dataset_config.initial_config_2d_grid_env.target_state=(7,7)\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "offline_training(\n",
     "    offline_policy_config=offline_policy_config,\n",
     "    num_epochs = NUM_EPOCHS,\n",
@@ -1094,7 +1091,7 @@
     }
    },
    "source": [
-    "**Restore and visualize trained policy**"
+    "##### **Restore and visualize trained policy**"
    ]
   },
   {
@@ -1110,7 +1107,7 @@
     "#SAVED_POLICY_NAME = \"policy_best_reward.pth\"\n",
     "SAVED_POLICY_NAME = \"policy.pth\"\n",
     "INITIAL_STATE = (0, 0)\n",
-    "FINAL_STATE = (7, 7)\n",
+    "FINAL_STATE = (2, 4)\n",
     "\n",
     "offline_policy_config = TrainedPolicyConfig(\n",
     "    name_expert_data=selected_data_set.value,\n",
@@ -1136,6 +1133,13 @@
     "    num_frames=100,\n",
     "    imitation_policy_sampling=False\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question**: Let's now change the dataset distribution. We'll collect 600 points with the first behavior policy and 100 with the second one. In this case, the probability of taking the suboptimal path will be higher. What paths are chosen by the algorithms?"
    ]
   },
   {
